[gd_scene load_steps=2 format=3 uid="uid://bjat6birf87xk"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/FishingScenes/FishPage/fish_item.gd" id="1_8fig1"]

[node name="FishItem" type="MarginContainer" groups=["FishShopItem"]]
custom_minimum_size = Vector2(0, 60)
script = ExtResource("1_8fig1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MC1" type="MarginContainer" parent="HBox"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = -5

[node name="VBox" type="VBoxContainer" parent="HBox/MC1"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="HBox/MC1/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = -2
theme_override_constants/margin_bottom = -2

[node name="NameLabel" type="Label" parent="HBox/MC1/VBox/MC"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Boot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MC3" type="MarginContainer" parent="HBox/MC1/VBox"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 11

[node name="CountColorRect" type="ColorRect" parent="HBox/MC1/VBox/MC3"]
layout_mode = 2
color = Color(0.411196, 0.297455, 0.149153, 1)

[node name="CountLabel" type="Label" parent="HBox/MC1/VBox/MC3"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 14
text = "22 | 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MC2" type="MarginContainer" parent="HBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 5

[node name="SellButton" type="Button" parent="HBox/MC2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Sell"

[node name="FishItemRefreshTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="button_down" from="HBox/MC2/SellButton" to="." method="_on_sell_button_button_down"]
[connection signal="timeout" from="FishItemRefreshTimer" to="." method="_on_fish_item_refresh_timer_timeout"]
